--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "image-trace-loader",
-  "version": "0.0.2",
-  "description": "Loads images and exports traced outlines as image/svg+xml URL-encoded data",
+  "name": "json-image-trace-loader",
+  "version": "0.0.1",
+  "description": "Loads images and exports traced outlines as image/svg+xml URL-encoded data in a JSON file",
   "main": "lib",
   "directories": {
     "lib": "lib"
   },
-  "author": "Emil Tholin @tholle1234",
+  "author": "Rizki Lazuardi @rmdwirizki",
   "license": "MIT",
-  "repository": "EmilTholin/image-trace-loader",
+  "repository": "rmdwirizki/json-image-trace-loader",
   "dependencies": {
     "loader-utils": "^1.1.0",
     "node-vibrant": "^3.0.0-alpha.2",
